feat: resolve java21 linter issues