@@ -100,11 +100,11 @@ public class GlossaryXLSParser {
         List<GlossaryEntry> result = new ArrayList<>();
         for (final GlossaryEntry entry : glossaryEntries) {
             boolean alreadyExist = false;
-            if (!result.isEmpty() && StringUtils.equals(result.get(result.size() - 1).getTopicOne(), entry.getTopicOne())
-                && StringUtils.equals(result.get(result.size() - 1).getTopicTwo(), entry.getTopicTwo())
-                && StringUtils.equals(result.get(result.size() - 1).getTopicThree(), entry.getTopicThree())
-                && StringUtils.equals(result.get(result.size() - 1).getDescription(), entry.getDescription())) {
-                result.get(result.size() - 1).getTerms().addAll(entry.getTerms());
+            if (!result.isEmpty() && StringUtils.equals(result.getLast().getTopicOne(), entry.getTopicOne())
+                && StringUtils.equals(result.getLast().getTopicTwo(), entry.getTopicTwo())
+                && StringUtils.equals(result.getLast().getTopicThree(), entry.getTopicThree())
+                && StringUtils.equals(result.getLast().getDescription(), entry.getDescription())) {
+                result.getLast().getTerms().addAll(entry.getTerms());
                 alreadyExist = true;
             }
             if (!alreadyExist) {
